# labcontrol

./: .gitignore  .gitmodules  .readthedocs.yaml  60-hantek-autoflash.rules  GUI_FIX_SUMMARY.md  GUI_README.md  HANTEK_INTEGRATION.md  HANTEK_USB_FIX.md  INSTALL_GUI.md  PLAN_V2.md  README.md  README_INTERFACES.md  TUI_README.md  USB_ERROR_FIX.md  WAYLAND_CRASH_FIX.md  install-hantek-udev.sh  install-windows.bat  install.sh  labcontrol-gui  labcontrol-gui.bat  labcontrol-shell.cmd  labcontrol-shell.ps1  labcontrol-shell.sh  labcontrol-tui  labcontrol-tui.bat  magnitudes.csv  myarray.csv  pyproject.toml  requirements.txt  setup.bat  setup.sh  test1.out  test2.out  test_gui_discovery.py  uninstall.sh  xval.csv  yval.csv
LTSPice/: ActivieBP.asc  ActivieBP.op.raw  ActivieBP.raw  ActivieBPv2.asc  ActivieBPv2.op.raw  ActivieBPv2.raw
design/: .$Labcontrol_classdiagram.drawio.dtmp  .$conceptLabcontrol.drawio.bkp  Labcontrol_classdiagram.drawio  conceptLabcontrol.drawio
docs/: conf_bckup.py.bckup  installatie.rst  requirements.txt
documentatie/: conf.py_old  installHandleidingLabcontrol.docx  oude_home_wiki.txt
labcontrol/: __init__.py  banner.py  cli.py  labcontrol.py  output.py  plotting.py  preset.py  testIPset.py
src/: .readthedocs.yaml  Measurements.py  __init__.py  control.py  doTests.py  fix_usb_busy.sh  flash_hantek_firmware.py  labcontrol.ini  labcontrol.py  launch_gui.py  launch_tui.py  main.py  myarray.csv  pyUSBTEST.py  requirements.txt  reset_hantek_usb.py  runtest.bat  simtest.py  test1.py  testIPset.py  testLibUsb1.py  test_hantek_integration.py
(+403 files in other folders)
